--- a/_config.yml
+++ b/_config.yml
@@ -78,5 +78,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/jungang/jungang.github.io.git
+  repository: ssh://git@github.com/jungang/jungang.github.io.git
   branch: master
